--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Fahmida</title>
+    <title>Fahmida - Data Analyst</title>
     <style>
         /* Global Styles */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', Arial, sans-serif;
             margin: 0;
             padding: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
 
         .header-content {
-            background-color: #333;
+            background-color: #4c4c4c;
             color: #fff;
-            padding: 1rem;
+            padding: 1.5rem;
             text-align: center;
         }
 
         .header-content h1 {
             margin: 0;
+            font-size: 2rem;
         }
 
         .header-content nav a {
@@ -27,6 +31,7 @@
             margin: 0 1rem;
             position: relative;
             overflow: hidden;
+            padding-bottom: 0.5rem;
         }
 
         .header-content nav a::before {
@@ -46,7 +51,9 @@
         }
 
         .main {
+            flex-grow: 1;
             padding: 2rem;
+            background-color: #f4f4f4;
         }
 
         .section {
@@ -56,35 +63,39 @@
         .dashboard {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            grid-gap: 1rem;
+            grid-gap: 1.5rem;
         }
 
         .dashboard-card {
-            background-color: #f4f4f4;
-            padding: 1rem;
+            background-color: #fff;
+            padding: 1.5rem;
             border-radius: 5px;
             text-align: center;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         .data-viz-icon::before {
             content: "📊";
-            font-size: 2rem;
+            font-size: 2.5rem;
             display: block;
-            margin-bottom: 0.5rem;
+            margin-bottom: 1rem;
+            color: #4c4c4c;
         }
 
         .code-icon::before {
             content: "💻";
-            font-size: 2rem;
+            font-size: 2.5rem;
             display: block;
-            margin-bottom: 0.5rem;
+            margin-bottom: 1rem;
+            color: #4c4c4c;
         }
 
         .footer-content {
-            background-color: #333;
+            background-color: #4c4c4c;
             color: #fff;
             padding: 1rem;
             text-align: center;
+            margin-top: auto;
         }
 
         .footer-content a {
@@ -105,10 +116,13 @@
             }
         }
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header-content">
-        <h1>FAHMIDA</h1>
+        <h1>Fahmida - Data Analyst</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="education.html">Education</a>
