--- a/skills.html
+++ b/skills.html
@@ -3,171 +3,130 @@
 <head>
     <title>Skills - Fahmida</title>
     <style>
-        /* Global Styles */
-        body {
-            font-family: 'Poppins', Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            background: linear-gradient(135deg, #1e2b4f, #3e5381, #1e2b4f);
-            background-size: 400% 400%;
-            animation: backgroundAnimation 20s ease infinite;
-        }
+      /* Global Styles */
+      body {
+          font-family: 'Roboto', Arial, sans-serif;
+          margin: 0;
+          padding: 0;
+          display: flex;
+          flex-direction: column;
+          min-height: 100vh;
+      }
 
-        @keyframes backgroundAnimation {
-            0% {
-                background-position: 0% 50%;
-            }
-            50% {
-                background-position: 100% 50%;
-            }
-            100% {
-                background-position: 0% 50%;
-            }
-        }
+      .header-content {
+          background-color: #333;
+          color: #fff;
+          padding: 1.5rem;
+          text-align: center;
+      }
 
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-            padding: 1.5rem 2.5rem;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
+      .header-content h1 {
+          margin: 0;
+          font-size: 2.2rem;
+      }
 
-        .header-logo {
-            font-size: 1.8rem;
-            font-weight: 700;
-            color: #fff;
-            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
-        }
+      .header-content nav a {
+          color: #fff;
+          text-decoration: none;
+          margin: 0 1rem;
+          font-size: 1.1rem;
+          font-weight: 500;
+          transition: color 0.3s ease-in-out;
+      }
 
-        .header-nav a {
-            color: #fff;
-            text-decoration: none;
-            font-size: 1.1rem;
-            font-weight: 500;
-            margin-left: 2rem;
-            position: relative;
-            padding-bottom: 0.5rem;
-            transition: color 0.3s ease-in-out;
-        }
+      .header-content nav a:hover {
+          color: #ccc;
+      }
 
-        .header-nav a::before {
-            content: "";
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 2px;
-            background: linear-gradient(to right, #00d9ff, #00a2ff);
-            transform: scaleX(0);
-            transform-origin: right;
-            transition: transform 0.3s ease-in-out;
-        }
+      .main {
+          flex-grow: 1;
+          padding: 2.5rem;
+          background-color: #f6f6f6;
+      }
 
-        .header-nav a:hover {
-            color: #e6e6e6;
-        }
+      .section {
+          margin-bottom: 3rem;
+      }
 
-        .header-nav a:hover::before {
-            transform: scaleX(1);
-            transform-origin: left;
-        }
+      .section h2 {
+          font-size: 1.8rem;
+          margin-bottom: 1.2rem;
+      }
 
-        .main {
-            flex-grow: 1;
-            padding: 4rem 3rem;
-            text-align: center;
-            color: #fff;
-            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
-        }
+      .section p {
+          font-size: 1.1rem;
+          line-height: 1.6;
+          color: #555;
+      }
 
-        .hero-section {
-            max-width: 800px;
-            margin: 0 auto;
-        }
+      .dashboard {
+          display: grid;
+          grid-template-columns: repeat(3, 1fr);
+          grid-gap: 1.8rem;
+      }
 
-        .hero-section h1 {
-            font-size: 3rem;
-            margin-bottom: 1.5rem;
-        }
+      .dashboard-card {
+          background-color: #fff;
+          padding: 1.8rem;
+          border-radius: 8px;
+          text-align: center;
+          box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+          transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+      }
 
-        .hero-section p {
-            font-size: 1.4rem;
-            line-height: 1.6;
-            margin-bottom: 2.5rem;
-        }
+      .dashboard-card:hover {
+          transform: translateY(-5px);
+          box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+      }
 
-        .hero-section::before {
-            content: "✨";
-            font-size: 5rem;
-            display: block;
-            margin-bottom: 1.5rem;
-        }
+      .data-viz-icon::before {
+          content: "📊";
+          font-size: 3rem;
+          display: block;
+          margin-bottom: 1.2rem;
+          color: #333;
+      }
 
-        .footer {
-            background-color: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-            padding: 1.5rem;
-            text-align: center;
-            font-size: 1rem;
-            color: #fff;
-            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
-            box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-        }
+      .code-icon::before {
+          content: "💻";
+          font-size: 3rem;
+          display: block;
+          margin-bottom: 1.2rem;
+          color: #333;
+      }
 
-        .footer a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 1rem;
-            transition: color 0.3s ease-in-out;
-        }
+      .footer-content {
+          background-color: #333;
+          color: #fff;
+          padding: 1.2rem;
+          text-align: center;
+          margin-top: auto;
+          font-size: 0.9rem;
+      }
 
-        .footer a:hover {
-            color: #e6e6e6;
-        }
+      .footer-content a {
+          color: #fff;
+          text-decoration: none;
+          margin: 0 1rem;
+          transition: color 0.3s ease-in-out;
+      }
 
-        /* Responsive Styles */
-        @media (max-width: 768px) {
-            .header {
-                padding: 1.2rem 1.5rem;
-            }
+      .footer-content a:hover {
+          color: #ccc;
+      }
 
-            .header-logo {
-                font-size: 1.5rem;
-            }
+      /* Responsive Styles */
+      @media (max-width: 768px) {
+          .dashboard {
+              grid-template-columns: 1fr;
+          }
 
-            .header-nav a {
-                font-size: 1rem;
-                margin-left: 1.5rem;
-            }
-
-            .main {
-                padding: 3rem 2rem;
-            }
-
-            .hero-section h1 {
-                font-size: 2.5rem;
-            }
-
-            .hero-section p {
-                font-size: 1.2rem;
-            }
-
-            .hero-section::before {
-                font-size: 4rem;
-            }
-
-            .footer {
-                padding: 1.2rem;
-                font-size: 0.9rem;
-            }
-        }
-    </style>
+          .header-content nav a {
+              display: block;
+              margin: 0.7rem 0;
+          }
+      }
+  </style>
 </head>
 <body>
     <div class="header-content">
