--- a/skills.html
+++ b/skills.html
@@ -5,78 +5,38 @@
     <style>
       /* Global Styles */
       body {
-            font-family: 'Poppins', Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            background: linear-gradient(135deg, #1e2b4f, #3e5381, #1e2b4f);
-            background-size: 400% 400%;
-            animation: backgroundAnimation 20s ease infinite;
-        }
+          font-family: 'Roboto', Arial, sans-serif;
+          margin: 0;
+          padding: 0;
+          display: flex;
+          flex-direction: column;
+          min-height: 100vh;
+      }
 
-        @keyframes backgroundAnimation {
-            0% {
-                background-position: 0% 50%;
-            }
-            50% {
-                background-position: 100% 50%;
-            }
-            100% {
-                background-position: 0% 50%;
-            }
-        }
+      .header-content {
+          background-color: #333;
+          color: #fff;
+          padding: 1.5rem;
+          text-align: center;
+      }
 
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-            padding: 1.5rem 2.5rem;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
+      .header-content h1 {
+          margin: 0;
+          font-size: 2.2rem;
+      }
 
-        .header-logo {
-            font-size: 1.8rem;
-            font-weight: 700;
-            color: #fff;
-            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
-        }
+      .header-content nav a {
+          color: #fff;
+          text-decoration: none;
+          margin: 0 1rem;
+          font-size: 1.1rem;
+          font-weight: 500;
+          transition: color 0.3s ease-in-out;
+      }
 
-        .header-nav a {
-            color: #fff;
-            text-decoration: none;
-            font-size: 1.1rem;
-            font-weight: 500;
-            margin-left: 2rem;
-            position: relative;
-            padding-bottom: 0.5rem;
-            transition: color 0.3s ease-in-out;
-        }
-
-        .header-nav a::before {
-            content: "";
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 2px;
-            background: linear-gradient(to right, #00d9ff, #00a2ff);
-            transform: scaleX(0);
-            transform-origin: right;
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .header-nav a:hover {
-            color: #e6e6e6;
-        }
-
-        .header-nav a:hover::before {
-            transform: scaleX(1);
-            transform-origin: left;
-        }
+      .header-content nav a:hover {
+          color: #ccc;
+      }
 
       .main {
           flex-grow: 1;
@@ -135,53 +95,25 @@
           color: #333;
       }
 
-      .footer a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 1rem;
-            transition: color 0.3s ease-in-out;
-        }
+      .footer-content {
+          background-color: #333;
+          color: #fff;
+          padding: 1.2rem;
+          text-align: center;
+          margin-top: auto;
+          font-size: 0.9rem;
+      }
 
-        .footer a:hover {
-            color: #e6e6e6;
-        }
+      .footer-content a {
+          color: #fff;
+          text-decoration: none;
+          margin: 0 1rem;
+          transition: color 0.3s ease-in-out;
+      }
 
-        /* Responsive Styles */
-        @media (max-width: 768px) {
-            .header {
-                padding: 1.2rem 1.5rem;
-            }
-
-            .header-logo {
-                font-size: 1.5rem;
-            }
-
-            .header-nav a {
-                font-size: 1rem;
-                margin-left: 1.5rem;
-            }
-
-            .main {
-                padding: 3rem 2rem;
-            }
-
-            .hero-section h1 {
-                font-size: 2.5rem;
-            }
-
-            .hero-section p {
-                font-size: 1.2rem;
-            }
-
-            .hero-section::before {
-                font-size: 4rem;
-            }
-
-            .footer {
-                padding: 1.2rem;
-                font-size: 0.9rem;
-            }
-        }
+      .footer-content a:hover {
+          color: #ccc;
+      }
 
       /* Responsive Styles */
       @media (max-width: 768px) {
