--- a/certifications.html
+++ b/certifications.html
@@ -240,8 +240,8 @@
 
     <footer class="footer">
         <a href="tel:+1234567890"><i class="fas fa-phone"></a>
-        <a href="mailto:example@example.com"><i class="fas fa-envelope"></a>
-        <a href="https://maps.google.com/?q=1234+Street+Name,+City,+Country" target="_blank"><i class="fas fa-map-marker-alt"></a>
+        <a href="mailto:example@example.com"><i class="fas fa-envelope"></i></a>
+        <a href="https://maps.google.com/?q=1234+Street+Name,+City,+Country" target="_blank"><i class="fas fa-map-marker-alt"></i></a>
     </footer>
 </body>
 </html>
