--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Fahmida - Data Analyst</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fahmida - Certifications</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <style>
         /* Global Styles */
         body {
@@ -192,9 +198,9 @@
     </main>
 
     <footer class="footer">
-        <a href="tel:+1234567890">+1 234 567 890</a>
-        <a href="mailto:example@example.com">example@example.com</a>
-        <a href="https://maps.google.com/?q=1234+Street+Name,+City,+Country" target="_blank">1234 Street Name, City, Country</a>
+        <a href="tel:+1234567890"><i class="fas fa-phone"></i></a>
+        <a href="mailto:example@example.com"><i class="fas fa-envelope"></i></a>
+        <a href="https://maps.google.com/?q=1234+Street+Name,+City,+Country" target="_blank"><i class="fas fa-map-marker-alt"></i></a>
     </footer>
 </body>
 </html>
