--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,199 +8,232 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <style>
-        /* Global Styles */
-        body {
-            font-family: 'Poppins', Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            background: linear-gradient(135deg, #1e2b4f, #3e5381, #1e2b4f);
-            background-size: 400% 400%;
-            animation: backgroundAnimation 20s ease infinite;
-        }
+  <style>
+    /* Global Styles */
+    body {
+      font-family: 'Poppins', Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      background: linear-gradient(135deg, #1e2b4f, #3e5381, #1e2b4f);
+      background-size: 400% 400%;
+      animation: backgroundAnimation 20s ease infinite;
+    }
 
-        @keyframes backgroundAnimation {
-            0% {
-                background-position: 0% 50%;
-            }
-            50% {
-                background-position: 100% 50%;
-            }
-            100% {
-                background-position: 0% 50%;
-            }
-        }
+    @keyframes backgroundAnimation {
+      0% {
+        background-position: 0% 50%;
+      }
+      50% {
+        background-position: 100% 50%;
+      }
+      100% {
+        background-position: 0% 50%;
+      }
+    }
 
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-            padding: 1.5rem 2.5rem;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(10px);
+      padding: 1.5rem 2.5rem;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
 
-        .header-logo {
-            font-size: 1.8rem;
-            font-weight: 700;
-            color: #fff;
-            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
-        }
+    .header-logo {
+      font-size: 1.8rem;
+      font-weight: 700;
+      color: #fff;
+      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+    }
 
-        .header-nav a {
-            color: #fff;
-            text-decoration: none;
-            font-size: 1.1rem;
-            font-weight: 500;
-            margin-left: 2rem;
-            position: relative;
-            padding-bottom: 0.5rem;
-            transition: color 0.3s ease-in-out;
-        }
+    .header-nav {
+      display: flex;
+      gap: 1.5rem;
+    }
 
-        .header-nav a::before {
-            content: "";
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 2px;
-            background: linear-gradient(to right, #00d9ff, #00a2ff);
-            transform: scaleX(0);
-            transform-origin: right;
-            transition: transform 0.3s ease-in-out;
-        }
+    .header-nav a {
+      color: #fff;
+      text-decoration: none;
+      font-size: 1.1rem;
+      font-weight: 500;
+      position: relative;
+      padding-bottom: 0.5rem;
+      transition: color 0.3s ease-in-out;
+    }
 
-        .header-nav a:hover {
-            color: #e6e6e6;
-        }
+    .header-nav a::before {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background: linear-gradient(to right, #00d9ff, #00a2ff);
+      transform: scaleX(0);
+      transform-origin: right;
+      transition: transform 0.3s ease-in-out;
+    }
 
-        .header-nav a:hover::before {
-            transform: scaleX(1);
-            transform-origin: left;
-        }
+    .header-nav a:hover {
+      color: #e6e6e6;
+    }
 
-        .main {
-            flex-grow: 1;
-            padding: 4rem 3rem;
-            text-align: center;
-            color: #fff;
-            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
-        }
+    .header-nav a:hover::before {
+      transform: scaleX(1);
+      transform-origin: left;
+    }
 
-        .hero-section {
-            max-width: 800px;
-            margin: 0 auto;
-        }
+    .main {
+      flex-grow: 1;
+      padding: 4rem 3rem;
+      text-align: center;
+      color: #fff;
+      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+    }
 
-        .hero-section h1 {
-            font-size: 3rem;
-            margin-bottom: 1.5rem;
-        }
+    .hero-section {
+      max-width: 800px;
+      margin: 0 auto;
+    }
 
-        .hero-section p {
-            font-size: 1.4rem;
-            line-height: 1.6;
-            margin-bottom: 2.5rem;
-        }
+    .hero-section h1 {
+      font-size: 3rem;
+      margin-bottom: 1.5rem;
+    }
 
-        .hero-section::before {
-            content: "✨";
-            font-size: 5rem;
-            display: block;
-            margin-bottom: 1.5rem;
-        }
+    .hero-section p {
+      font-size: 1.4rem;
+      line-height: 1.6;
+      margin-bottom: 2.5rem;
+    }
 
-        .footer {
-            background-color: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-            padding: 1.5rem;
-            text-align: center;
-            font-size: 1rem;
-            color: #fff;
-            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
-            box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-        }
+    .hero-section::before {
+      content: "✨";
+      font-size: 5rem;
+      display: block;
+      margin-bottom: 1.5rem;
+    }
 
-        .footer a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 1rem;
-            transition: color 0.3s ease-in-out;
-        }
+    .footer {
+      background-color: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(10px);
+      padding: 1.5rem;
+      text-align: center;
+      font-size: 1rem;
+      color: #fff;
+      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+      box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+    }
 
-        .footer a:hover {
-            color: #e6e6e6;
-        }
+    .footer a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 1rem;
+      transition: color 0.3s ease-in-out;
+    }
 
-        /* Responsive Styles */
-        @media (max-width: 768px) {
-            .header {
-                padding: 1.2rem 1.5rem;
-            }
+    .footer a:hover {
+      color: #e6e6e6;
+    }
 
-            .header-logo {
-                font-size: 1.5rem;
-            }
+    /* Responsive Styles */
+    @media (max-width: 768px) {
+      .header {
+        padding: 1.2rem 1.5rem;
+      }
 
-            .header-nav a {
-                font-size: 1rem;
-                margin-left: 1.5rem;
-            }
+      .header-logo {
+        font-size: 1.5rem;
+      }
 
-            .main {
-                padding: 3rem 2rem;
-            }
+      .header-nav {
+        flex-direction: column;
+        gap: 1rem;
+        align-items: flex-start;
+        padding-top: 1rem;
+      }
 
-            .hero-section h1 {
-                font-size: 2.5rem;
-            }
+      .main {
+        padding: 3rem 2rem;
+      }
 
-            .hero-section p {
-                font-size: 1.2rem;
-            }
+      .hero-section h1 {
+        font-size: 2.5rem;
+      }
 
-            .hero-section::before {
-                font-size: 4rem;
-            }
+      .hero-section p {
+        font-size: 1.2rem;
+      }
 
-            .footer {
-                padding: 1.2rem;
-                font-size: 0.9rem;
-            }
-        }
-    </style>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+      .hero-section::before {
+        font-size: 4rem;
+      }
+
+      .footer {
+        padding: 1.2rem;
+        font-size: 0.9rem;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .header-logo {
+        font-size: 1.2rem;
+      }
+
+      .header-nav {
+        gap: 0.5rem;
+      }
+
+      .header-nav a {
+        font-size: 0.9rem;
+        margin-left: 0;
+      }
+
+      .hero-section h1 {
+        font-size: 2rem;
+      }
+
+      .hero-section p {
+        font-size: 1rem;
+      }
+
+      .hero-section::before {
+        font-size: 3rem;
+      }
+    }
+  </style>
 </head>
 <body>
-    <header class="header">
-        <div class="header-logo">Fahmida</div>
-        <nav class="header-nav">
-            <a href="index.html">Home</a>
-            <a href="education.html">Education</a>
-            <a href="skills.html">Skills</a>
-            <a href="certifications.html">Certifications</a>
-            <a href="extracurricular.html">Extracurricular</a>
-        </nav>
-    </header>
+  <header class="header">
+    <div class="header-logo">Fahmida</div>
+    <nav class="header-nav">
+      <a href="index.html">Home</a>
+      <a href="education.html">Education</a>
+      <a href="skills.html">Skills</a>
+      <a href="certifications.html">Certifications</a>
+      <a href="extracurricular.html">Extracurricular</a>
+    </nav>
+  </header>
 
-    <main class="main">
-        <section class="hero-section">
-            <h1>Data Driven Insights</h1>
-            <p>I am an ambitious Sociology graduate with a double major in Malayalam, currently advancing in Data Analysis. I possess a solid foundation in research, analytics, and statistical analysis, with proficiency in Python and SQL.</p>
-        </section>
-    </main>
+  <main class="main">
+    <section class="hero-section">
+      <h1>Data Driven Insights</h1>
+      <p>I am an ambitious Sociology graduate with a double major in Malayalam, currently advancing in Data Analysis. I possess a solid foundation in research, analytics, and statistical analysis, with proficiency in Python and SQL.</p>
+    </section>
+  </main>
 
-    <footer class="footer">
-        <a href="tel:+1234567890"><i class="fas fa-phone"></i></a>
-        <a href="mailto:example@example.com"><i class="fas fa-envelope"></i></a>
-        <a href="https://maps.google.com/?q=1234+Street+Name,+City,+Country" target="_blank"><i class="fas fa-map-marker-alt"></i></a>
-    </footer>
+  <footer class="footer">
+    <a href="tel:+1234567890"><i class="fas fa-phone"></i></a>
+    <a href="mailto:example@example.com"><i class="fas fa-envelope"></i></a>
+    <a href="https://maps.google.com/?q=1234+Street+Name,+City,+Country" target="_blank"><i class="fas fa-map-marker-alt"></i></a>
+  </footer>
 </body>
 </html>
