--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     .header-nav {
       display: flex;
-      gap: 1.5rem;
+      gap: 2rem;
     }
 
     .header-nav a {
@@ -65,30 +65,28 @@
       font-size: 1.1rem;
       font-weight: 500;
       position: relative;
-      padding-bottom: 0.5rem;
-      transition: color 0.3s ease-in-out;
+      padding: 0.5rem 0;
+      transition: all 0.3s ease-in-out;
     }
 
     .header-nav a::before {
       content: "";
       position: absolute;
       bottom: 0;
-      left: 0;
-      width: 100%;
+      left: 50%;
+      width: 0;
       height: 2px;
       background: linear-gradient(to right, #00d9ff, #00a2ff);
-      transform: scaleX(0);
-      transform-origin: right;
-      transition: transform 0.3s ease-in-out;
-    }
-
-    .header-nav a:hover {
-      color: #e6e6e6;
+      transition: width 0.3s ease, left 0.3s ease;
     }
 
     .header-nav a:hover::before {
-      transform: scaleX(1);
-      transform-origin: left;
+      width: 100%;
+      left: 0;
+    }
+
+    .header-nav a:hover {
+      color: #00d9ff;
     }
 
     .main {
